modules/cli/src/test/resources/good/misc/globals/gdo/Do02.scr
module good.misc.globals.gdo.Do02;


global protocol Do2(role A, role B)
{
	do Do2a(B, A);
}

global protocol Do2a(role A, role B)
{
	l1() from A to B;
}

